--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Engine for No Thanks! the tabletop game.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node dist/test.js",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
