--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "node test/index.js",
-    "build": "webpack --config webpack.build.config.js"
+    "build": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
